Colab을 통해 생성됨

--- a/crawling_basic_examples.ipynb
+++ b/crawling_basic_examples.ipynb
@@ -120,7 +120,7 @@
         "titles = soup.find_all('div', {'class': 'title_area'})\n",
         "\n",
         "# 가장 앞에 있는 값만 확인\n",
-        "titles[0]"
+        "titles[:5]"
       ],
       "metadata": {
         "id": "fjQuqLL4llR3"
